--- a/Ginzburg_Landau.ipynb
+++ b/Ginzburg_Landau.ipynb
@@ -7,21 +7,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from time import perf_counter\n",
+    "\n",
+    "import matplotlib.cm as cm\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
-    "from tensorflow import keras\n",
-    "from tensorflow.keras.layers import Input, Dense\n",
-    "from tensorflow.keras.models import Model\n",
-    "import matplotlib.pyplot as plt\n",
-    "from tensorflow import convert_to_tensor\n",
-    "from tensorflow.keras.optimizers import Adam, Nadam\n",
+    "from scipy.linalg import LinAlgError, cholesky, issymmetric\n",
     "from scipy.optimize import minimize\n",
+    "from tensorflow import convert_to_tensor, keras\n",
     "from tensorflow.keras.constraints import NonNeg\n",
-    "import matplotlib.cm as cm\n",
-    "from scipy.linalg import cholesky,LinAlgError,issymmetric\n",
-    "from time import perf_counter\n",
-    "tf.keras.backend.set_floatx('float64')\n",
+    "from tensorflow.keras.layers import Dense, Input\n",
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.optimizers import Adam, Nadam\n",
+    "\n",
+    "tf.keras.backend.set_floatx(\"float64\")\n",
     "tf.keras.utils.set_random_seed(1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "500781ce-d9db-4a09-8e13-2a61d1866b0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x0, xf = -1.0, 1.0\n",
+    "y0, yf = -1.0, 1.0\n",
+    "\n",
+    "t0 = 0.0\n",
+    "dt = 0.2\n",
+    "tfinal = dt\n",
+    "\n",
+    "num_polynomials = 4\n",
+    "\n",
+    "nu = 10.0\n",
+    "eps = 4e-3\n",
+    "\n",
+    "L1 = 30\n",
+    "layer_dims = (1 + 2 * num_polynomials, L1, L1, L1, L1, L1, L1, L1, L1,2)"
    ]
   },
   {
@@ -31,15 +55,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x0 = -1\n",
-    "xf = 1\n",
-    "y0 = -1\n",
-    "yf = 1\n",
-    "t0 = 0.\n",
-    "dt = 0.2\n",
-    "tfinal = dt\n",
-    "num_polynomials=4\n",
-    "\n",
     "class PeriodicC0Layer(keras.layers.Layer):\n",
     "    def __init__(self, num_polynomials, **kwargs):\n",
     "        super(PeriodicC0Layer, self).__init__(**kwargs)\n",
@@ -94,10 +109,6 @@
     "        \n",
     "        return tf.concat([t, px, py], axis=1)\n",
     "    \n",
-    "L1 = 30\n",
-    "\n",
-    "\n",
-    "layer_dims = (1+2*num_polynomials,L1,L1,L1,L1,L1,L1,L1,L1,2)\n",
     "\n",
     "def generate_model():\n",
     "    X_input = Input((3,))\n",
@@ -161,8 +172,7 @@
     "    v = Nout[:,1,None]\n",
     "    return u,v\n",
     "\n",
-    "nu = 10.\n",
-    "eps = 4e-3\n",
+    "\n",
     "def get_results(N,X,t0,tfinal):\n",
     "   with tf.GradientTape(persistent=True, watch_accessed_variables=False) as gt1:\n",
     "      gt1.watch(X)\n",
@@ -201,7 +211,7 @@
     "    loss_0 = loss_function(u0,u0pinn) + loss_function(v0,v0pinn)\n",
     "    return loss_f + lam0*loss_0\n",
     "\n",
-    "def grads(N,X,X0,u0,v0,t0,tfinal): #Gradients wrt the trainable parameters\n",
+    "def grads(N,X,X0,u0,v0,t0,tfinal):\n",
     "    with tf.GradientTape() as tape2:\n",
     "        _,_,fu,fv = get_results(N,X,t0,tfinal)\n",
     "        u0pinn,v0pinn = output(N, X0,t0,tfinal)\n",
@@ -209,12 +219,20 @@
     "    gradsN = tape2.gradient(loss_value,N.trainable_variables)\n",
     "    return gradsN,loss_value\n",
     "\n",
-    "@tf.function() #Precompile training function to accelerate the process\n",
-    "def training(N,X,X0,u0,v0,t0,tfinal,optimizer): #Training step function\n",
+    "@tf.function() \n",
+    "def training(N,X,X0,u0,v0,t0,tfinal,optimizer): \n",
     "    parameter_gradients,loss_value = grads(N,X,X0,u0,v0,t0,tfinal)\n",
     "    optimizer.apply_gradients(zip(parameter_gradients,N.trainable_variables))\n",
-    "    return loss_value\n",
-    "\n",
+    "    return loss_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13b5b4f0-dddb-43e3-83eb-84ae4b1b561e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Nepochs = 0\n",
     "Nchange=500\n",
     "Nint = 20000\n",
@@ -246,14 +264,10 @@
     "        #X = tf.concat([X,X0],axis=0)\n",
     "        u0 = uinit(X0)\n",
     "        v0 = vinit(X0)\n",
-    "\n",
-    "        #X = random_permutation(X)\n",
     "    if (i+1)%100 == 0:\n",
     "        _,_,fu,fv = get_results(N,X,t0,tfinal)\n",
     "        u0pinn,v0pinn = output(N, X0, t0, tfinal)\n",
     "        loss_value = loss(fu,fv,u0,u0pinn,v0,v0pinn)\n",
-    "        print(\"i=\",i+1)\n",
-    "        print(template.format(i+1,loss_value))\n",
     "        loss_list = np.append(loss_list,loss_value.numpy())\n",
     "        \n",
     "    training(N,X,X0,u0,v0,t0,tfinal,optimizer)\n",
@@ -265,8 +279,16 @@
     "print(f\"Total Adam training time: {adam_training_time:.2f} seconds\")\n",
     "\n",
     "with open(f\"adam_training_time.txt\", \"w\") as f:\n",
-    "    f.write(f\"Adam Training Time: {adam_training_time:.2f} seconds\")\n",
-    "\n",
+    "    f.write(f\"Adam Training Time: {adam_training_time:.2f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "016599cd-2a30-41b8-a020-f3f7076ff06a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def nested_tensor(grad,layer_dims,train_activations=False,bias=True,num_polynomials=num_polynomials):\n",
     "\n",
     "    if train_activations == False:\n",
@@ -335,23 +357,16 @@
     "Nprint = 100\n",
     "\n",
     "initial_weights = np.concatenate([tf.reshape(w, [-1]).numpy() \\\n",
-    "                                  for w in N.weights]) #initial set of trainable variables\n",
+    "                                  for w in N.weights]) \n",
     "    \n",
     "lossbfgs = np.array([])\n",
     "\n",
     "cont=0\n",
     "Nsave=50\n",
     "\n",
-    "\n",
-    "\n",
-    "def callback(*,intermediate_result): #Callback function, to obtain the loss at every iteration\n",
+    "def callback(*,intermediate_result): \n",
     "    global N,cont,lossbfgs\n",
-    "    '''\n",
-    "    if cont%Nsave == 0:\n",
-    "        N.save(fname.format(cont+Nepochs)) \n",
-    "    '''\n",
     "    if (cont+1)%100 == 0 or cont == 0:\n",
-    "        #print(loss_value.numpy(),cont+1)\n",
     "        loss_value = intermediate_result.fun**power\n",
     "        lossbfgs = np.append(lossbfgs,loss_value)\n",
     "        loss_value = intermediate_result.fun**power\n",
@@ -373,20 +388,17 @@
     "iterations_slice = 0\n",
     "Nbfgs = max_iters*Nslices\n",
     "\n",
-    "epochs_bfgs = np.arange(0,Nbfgs+100,100) #iterations bfgs list\n",
+    "epochs_bfgs = np.arange(0,Nbfgs+100,100)\n",
     "epochs_bfgs+=Nepochs\n",
-    "lossbfgs = np.zeros(len(epochs_bfgs)) #loss bfgs list\n",
+    "lossbfgs = np.zeros(len(epochs_bfgs)) \n",
     "\n",
     "Nprev = generate_model()\n",
     "resh_weights = nested_tensor(initial_weights, layer_dims)\n",
     "Nprev.set_weights(resh_weights)\n",
-    "\n",
     "iterations_slice=0\n",
     "\n",
     "#------------------------- BFGS TRAINING --------------------------------------\n",
     "initial_time_bfgs = perf_counter()\n",
-    "\n",
-    "\n",
     "while cont_slice < Nslices: \n",
     "    print(\"Change batch\")\n",
     "    result = minimize(loss_and_gradient,initial_weights, args = (N,X,X0,u0,v0,t0,tfinal,layer_dims),\n",
@@ -408,22 +420,17 @@
     "    X0 = generate_initial(N0,t0)\n",
     "    if result.nit != 0:\n",
     "        iterations_slice+=Nchange\n",
-    "        print(iterations_slice)\n",
-    "    #X = tf.concat([X,X0],axis=0)\n",
-    "    \n",
     "    if cont_slice%Nslices == 0:\n",
     "        u0 = uinit(X0)\n",
     "        v0 = vinit(X0)\n",
     "        _,_,fu,fv = get_results(N,X,t0,tfinal)\n",
     "        u0pinn,v0pinn = output(N, X0,t0,tfinal)\n",
     "        loss_value = loss(fu,fv,u0,u0pinn,v0,v0pinn)\n",
-    "        print(loss_value)\n",
     "    else:\n",
     "        u0,v0 = output(Nprev, X0, t0-dt, tfinal-dt)\n",
     "        _,_,fu,fv = get_results(N,X,t0,tfinal)\n",
     "        u0pinn,v0pinn = output(N,X0,t0,tfinal)\n",
     "        loss_value = loss(fu,fv,u0,u0pinn,v0,v0pinn)\n",
-    "        print(loss_value)\n",
     "        \n",
     "    if (loss_value.numpy() < tol_loss or iterations_slice >= max_iters) and result.nit !=0:\n",
     "        Nprev = generate_model()\n",
@@ -432,10 +439,7 @@
     "        N = generate_model()\n",
     "        resh_weights = nested_tensor(initial_weights,layer_dims)\n",
     "        N.set_weights(resh_weights)\n",
-    "        \n",
-    "        N.save(f\"results8-20-20000/Adam_0_PINN_{cont_slice+1}_{method_bfgs}_more_iters.h5\", save_format=\"h5\")\n",
-    "\n",
-    "        \n",
+    "                \n",
     "        cont_slice+=1\n",
     "        t0+=dt\n",
     "        tfinal+=dt\n",
@@ -448,8 +452,7 @@
     "        \n",
     "        H0 = tf.eye(len(initial_weights),dtype=tf.float64)\n",
     "        H0 = H0.numpy()\n",
-    "        iterations_slice = 0\n",
-    "\n"
+    "        iterations_slice = 0\n"
    ]
   }
  ],
